# ppl

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  release.sh
.github/workflows/: rust-ci.yml
src/: color.rs  data.rs  db.rs  do_add.rs  do_init.rs  do_tui.rs  main.rs
src/entities/: contact.rs  entity.rs  entitys.rs  mod.rs  ppl.rs  prelude.rs  relation.rs  sig_date.rs  tier.rs  tier_defaults.rs  trait.rs  trait_defaults.rs  traits.rs
src/migrator/: m20241219_000001_create_ppl.rs  m20241220_000002_create_contact.rs  m20241220_000003_create_entity.rs  m20241220_000004_create_sig_date.rs  m20241220_000005_create_trait.rs  m20241220_000006_create_relation.rs  m20241220_000007_create_tier.rs  m20241222_000008_create_traitsettings.rs  m20241222_000009_create_tiersettings.rs  m20260116_000010_add_sig_date_delta_to_tier.rs  m20260116_000011_add_sig_date_delta_to_tier_defaults.rs  m20260116_000012_add_meta_to_ppl.rs  mod.rs
