[package]
name = "ppl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6"
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = ["widget-calendar"] }
sea-orm = { version = "1.1.2" , features = ["sqlx-sqlite", "runtime-tokio", "macros"]}
wealthy = "0.2.0"
futures = "0.3.30"
tokio = "1.42.0"
sea-orm-migration = "1.1.2"
async-trait = "0.1.77"
log = "0.4.20"
env_logger = "0.11.6"
tui-input = "0.11.1"
enum-iterator = "2.1.0"
dateparser = "0.2.1"
interim = { version = "0.1.2", features = ["chrono"] }
chrono = "0.4.39"
tracing-error = "0.2.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
directories = "5.0.1"
lazy_static = "1.5.0"
colored = { version = "2.2.0" }
time = "0.3.37"
itertools = "0.12.0"
xdg = "2.5.2"
